AMBARI-23210 Customise Services: Alignment issue while adding new custom password property

--- a/ambari-web/app/styles/service_configurations.less
+++ b/ambari-web/app/styles/service_configurations.less
@@ -289,6 +289,7 @@
   }
   .config-controls {
     line-height: 34px;
+    vertical-align: top;
   }
   .clear-left{
     clear:left;
@@ -327,5 +328,13 @@
         left: auto;
       }
     }
+  }
+}
+
+.password-field-wrapper {
+  width: 75%;
+  display: inline-block;
+  .row {
+    padding: 0;
   }
 }
